# chadbench

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  dockerfile  setup.sh  setup_env.sh
scripts/: .entrypoint-local.sh  .entrypoint.sh  build.sh  calibrate-camera.sh  clean.sh  combined-record.sh  dlio-launch.sh  docker-attach.sh  docker-run.sh  ouster-record.sh  ouster-replay.sh  ouster-stream.sh  show-colored-pc.sh  start-sync-saver.sh  startimagesaver.sh  startlidardatasaver.sh  stop-processes.sh  stream-colored-pc.sh
src/image_saver/image_saver/: image_saver_node.py
src/lidardatasaver/: CMakeLists.txt  package.xml
src/lidardatasaver/launch/: lidardatasaver_launch.py
src/lidardatasaver/src/: lidardatasaver.cpp
src/synchronized_data/: package.xml  setup.cfg  setup.py
src/synchronized_data/synchronized_data/: synchronized_data_node.py
